feat: take command